# CenterStage

./: .gitignore  LICENSE  README.md  lite.py  main.py  pyproject.toml  requirements.txt  test_preview.py  ultralight.py
src/: __init__.py
src/core/: __init__.py  camera.py  center_stage.py  detector.py  tracker.py  virtual_camera.py
src/styles/: dark_theme.qss
src/ui/: __init__.py  control_panel.py  main_window.py  preview_widget.py
src/ui/widgets/: __init__.py  slider_with_label.py  status_indicator.py  toggle_switch.py
src/utils/: __init__.py  config.py  logger.py  performance.py
tests/: __init__.py  test_camera.py  test_center_stage.py  test_detector.py
